[gd_scene load_steps=15 format=3 uid="uid://83u3qvdvlq5m"]

[ext_resource type="Script" path="res://Components/Objects/RunnerStage.gd" id="1_vum2m"]
[ext_resource type="PackedScene" uid="uid://brxrdbx6n7myw" path="res://Scenes/Objects/Asteroids/asteroid.tscn" id="2_7eghq"]
[ext_resource type="PackedScene" uid="uid://767s2jwo8m6h" path="res://UI/StageIntro/stage-intro.tscn" id="3_bp7i2"]
[ext_resource type="PackedScene" uid="uid://bjllgglcntv5r" path="res://UI/StageDone/stage-done.tscn" id="4_rj7e6"]
[ext_resource type="PackedScene" uid="uid://crcnk425rcdew" path="res://UI/HUD/HUD.tscn" id="5_y5wc4"]
[ext_resource type="PackedScene" uid="uid://orouoqtsvprh" path="res://UI/Gameover/gameover.tscn" id="6_8n0e0"]
[ext_resource type="PackedScene" uid="uid://7qqjxuoib4t7" path="res://Scenes/Objects/Spaceship/spaceship.tscn" id="7_ha32s"]
[ext_resource type="Script" path="res://Components/Objects/Spawner.gd" id="8_naruo"]
[ext_resource type="PackedScene" uid="uid://cibcplnig6bq" path="res://Scenes/Objects/Asteroids/big_asteroid.tscn" id="9_i3cet"]
[ext_resource type="PackedScene" uid="uid://1yhixov4qtju" path="res://Scenes/Objects/Asteroids/med_asteroid.tscn" id="10_18kdd"]
[ext_resource type="PackedScene" uid="uid://281m84o112uh" path="res://Scenes/Objects/Coins/coin.tscn" id="11_fvkrg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6fqdv"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_7fgt4"]
sky_material = SubResource("ProceduralSkyMaterial_6fqdv")

[sub_resource type="Environment" id="Environment_dnqte"]
background_mode = 1
background_color = Color(0.0627451, 0, 0.109804, 1)
sky = SubResource("Sky_7fgt4")
ambient_light_source = 2
ambient_light_color = Color(1, 0.937255, 1, 1)
tonemap_mode = 2
ssr_enabled = true
ssao_enabled = true
ssil_enabled = true
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.0256
fog_sky_affect = 0.0
volumetric_fog_sky_affect = 0.0

[node name="RunnerStage" type="Node3D" node_paths=PackedStringArray("spaceship", "intro_ui", "hud_ui", "done_ui", "gameover_ui")]
script = ExtResource("1_vum2m")
next_stage = ExtResource("2_7eghq")
spaceship = NodePath("Spaceship")
intro_ui = NodePath("stage-intro")
hud_ui = NodePath("HUD")
done_ui = NodePath("stage-done")
gameover_ui = NodePath("gameover")
run_time = 70

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dnqte")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0.440943, -0.425674, 0.790172, -0.235738, 0.794543, 0.559579, 0, 0, 0)
light_color = Color(0.486275, 0.345098, 1, 1)
light_energy = 1.955

[node name="stage-intro" parent="." instance=ExtResource("3_bp7i2")]

[node name="stage-done" parent="." instance=ExtResource("4_rj7e6")]
visible = false

[node name="HUD" parent="." instance=ExtResource("5_y5wc4")]
visible = false

[node name="gameover" parent="." instance=ExtResource("6_8n0e0")]
visible = false

[node name="Spaceship" parent="." instance=ExtResource("7_ha32s")]

[node name="Spawner" type="Node3D" parent="." node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -122.517)
script = ExtResource("8_naruo")
player = NodePath("../Spaceship")
objects = Array[PackedScene]([ExtResource("2_7eghq"), ExtResource("9_i3cet"), ExtResource("10_18kdd")])
speed = 60
max_objects = 500

[node name="Spawner2" type="Node3D" parent="." node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -122.517)
script = ExtResource("8_naruo")
player = NodePath("../Spaceship")
spawn_type = 1
objects = Array[PackedScene]([ExtResource("11_fvkrg")])
speed = 50

[connection signal="pressed" from="stage-intro/Panel/Button" to="." method="on_start_game"]
[connection signal="pressed" from="stage-done/Button" to="." method="goto_next_stage"]
[connection signal="pressed" from="gameover/RestartButton" to="." method="restart_game"]
[connection signal="dead" from="Spaceship" to="." method="game_over"]

[editable path="stage-intro"]
[editable path="stage-done"]
[editable path="gameover"]
